[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "pip-with-requires-python"
module = "pip_with_requires_python"
author = "Thomas Grainger"
author-email = "pip-with-requires-python@graingert.co.uk"
home-page = "https://github.com/graingert/pip-with-requires-python"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
description-file = "readme.md"
requires = [
    "pip~=20.3; python_version < '2'",
    "pip~=19.1.1; python_version == '3.4.*'",
    "pip~=20.3; python_version == '3.5.*'",
    "pip>=21; python_version > '3.5'",
]
